test/vm/fails/erase_recursion_overflow.js

var test;

for(var i = 0; i < 1002; ++i) {
	test = [test];
}

test = null;
